# pokemon-rel

./: .gitignore  .gitmodules  Cargo.toml  PIPELINE_ARCHITECTURE_IMPROVEMENTS.md  PIPELINE_IMPROVEMENTS.md  REFACTORING_README.md  ai_state.json  ppo_policy.json
config/: default.toml
lua/src/: PokeBot.lua
pokebot-rust/: Cargo.toml
pokebot-rust/src/: lib.rs
pokebot-rust/src/network/: client.rs  manager.rs  mod.rs
src/: __init__.py  config.py  config.rs  coordinator.rs  device_utils.py  error.rs  image_processing.py  lib.rs  loop_detection.py  main.py  main.rs  main_refactored.py  network.py  pokemon_environment.py  reward_system.py  trainer.py
src/app/: mod.rs  multiclient_app.rs  orchestrator.rs  visualization_app.rs
src/app/controller/: app_controller.rs
src/app/views/: client_view.rs  mod.rs
src/common/: frame.rs  mod.rs
src/emulator/: emulator_client.rs  emulator_reader.rs  emulator_writer.rs  mod.rs
src/intake/: mod.rs
src/intake/client/: client.rs  client_manager.rs  manager.rs  mod.rs  supervisor.rs
src/intake/frame/: frame.rs  iframe_reader.rs  mod.rs
src/network/: client.rs  frame.rs  manager.rs  mod.rs  server.rs
src/network/client/: client.rs  client_manager.rs
src/network/frame/: frame.rs  frame_reader.rs  iframe_reader.rs  (+1 more)
src/pipeline/: controller.rs  ml_pipeline_service.rs  mod.rs  pipeline.rs  pipeline_factory.rs
vm/: debain12-base.pkr.hcl  network-config.yml  packer.pkr.hcl  shinyfarm-app.pkr.hcl  user-data.yaml
vm/http/: preseed.cfg
vm/scripts/: build-deps.sh  build-libtas.sh  build-melonds.sh  systemd-units.sh
(+120 files in other folders)
