[package]
name = "pokebot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.130" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2" }
tower-layer = { version = "0.3.3" }
tracing = { version = "0.1.41" }
uuid = { version = "1.13.0", features = ["v4"] }
