[package]
name = "pokebot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bloomfilter = { version = "3.0.0" }
serde = { version = "1.0.210", features = ["derive"] }
futures = { version = "0.3" }
imghash = { git = "https://github.com/surno/imghash-rs.git" }
serde_json = { version = "1.0.130" }
thiserror = { version = "2.0.12" }
time = { version = "0.3.41" }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "limit", "timeout", "make"] }
tower-layer = { version = "0.3.3" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
uuid = { version = "1.13.0", features = ["v4"] }


# Visualization dependencies
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui = { version = "0.31.1" }
eframe = { version = "0.31.1" }
image = { version = "0.25.6" }
tokio-stream = { version = "0.1" }

desmume-rs = { git = "https://github.com/surno/desmume-rs.git" }
